# unnamed

./: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  Cross.toml  README.md  flake.nix  justfile  server.toml.example
apps/: README.md
apps/gui/: Cargo.toml  README.md
apps/gui/assets/: .gitignore
apps/gui/assets/trans/: en.ftl  zh-hans.ftl
apps/gui/src/: app.rs  config.rs  constants.rs  key.rs  main.rs  scope.rs  settings.rs  user_command.rs
apps/gui/src/app/: config.rs  key.rs  main.rs  mod.rs  scope.rs  user_command.rs
apps/gui/src/backend/: mod.rs  search.rs
apps/gui/src/component/: mod.rs  search_bar.rs  search_result_viewer.rs  status_bar.rs
apps/gui/src/component/status_bar/: mod.rs  status_widget.rs
apps/gui/src/components/: mod.rs  search_bar.rs  status_bar.rs
apps/gui/src/screen/: settings.rs
apps/gui/src/ui/: config.rs  font.rs  icon.rs  mod.rs  shape.rs  theme.rs
apps/gui/src/ui/theme/: hexa34c.rs  mod.rs  monochrome.rs
apps/gui/src/ui/theme/modus_themes_palette/: README.md  helper.el  mod.rs  operandi.rs  operandi_tinted.rs  vivendi.rs  vivendi_tinted.rs
apps/gui/src/util/: mod.rs  query_highlighter.rs  search_result_store.rs  search_status.rs  sort.rs  thread.rs  time.rs
apps/gui/src/util/completion/: manager.rs  mod.rs  path.rs  query_analyzer.rs  session.rs  state.rs
apps/gui/src/widgets/: mod.rs
apps/server/: Cargo.toml
apps/server/examples/: benchmark_test.rs  interactive_client.rs  test_client.rs
apps/server/src/: cli.rs  config.rs  constants.rs  error.rs  main.rs  session.rs  settings.rs
apps/server/src/command/: clear_cache.rs  debug_cache.rs  index.rs  mod.rs  serve.rs
benchmark/: card.csv  extract_data.py  report.txt  result.csv
benchmark/EN/: card.csv  generate_card.py  report.txt  result.csv
benchmark/EN/processed/: keyword_index.json  keyword_summary.txt
benchmark/EN/processed/texts/: 001_MED-4239.txt  003_MED-863.txt  006_MED-1993.txt  007_MED-1857.txt  009_MED-4739.txt  010_MED-1282.txt  011_MED-4443.txt  013_MED-3731.txt  014_MED-1204.txt  015_MED-3966.txt  018_MED-894.txt  023_MED-4034.txt  025_MED-3806.txt  028_MED-4308.txt  030_MED-3730.txt  032_MED-1842.txt  034_MED-3961.txt  038_MED-718.txt  040_MED-5046.txt  041_MED-1554.txt  042_MED-4546.txt  043_MED-3021.txt  044_MED-2452.txt  047_MED-1814.txt  048_MED-4858.txt  049_MED-2435.txt  052_MED-2719.txt  053_MED-1252.txt  061_MED-4705.txt  066_MED-1165.txt  069_MED-5148.txt  073_MED-5285.txt  074_MED-2599.txt  080_MED-4369.txt  081_MED-1879.txt  082_MED-4899.txt  084_MED-1170.txt  088_MED-1276.txt  090_MED-4220.txt  091_MED-5167.txt  (+52 more)
benchmark/ZH/: generate_keyword_index.py  keyword_index.json  report.txt  result.csv
benchmark/ZH/docs/extracted/: 001_属鼠的想用五谷起小名 属鼠小名多米的寓意-十二星座网.txt  004_一天消耗300卡路里多少天能减10斤_百度知道.txt  006_艾滋病窗口期到底多久啊_有问必答_快速问医生.txt  009_胸腺肽副作用-有来医生.txt  010_长方体容积公式是什么_高三网.txt  011_化油器的组成结构如何各个零件有什么作用呢看了会很有帮助 - 骑士.txt  014_脚底脱皮是怎么回事_39健康问答_39健康网.txt  015_华为nova7Pro的配置参数怎么样-华为nova 7 Pro(8GB128GB5G版).txt  017_红旗E115售价曝光 大概率40万-60万之间_汽车江湖.txt  019_吃米非司酮片多久可以喂奶_有问必答_快速问医生.txt  026_夏天定妆用散粉还是粉饼 正确选择妆效才持久_尚之潮.txt  027_半个月大的宝宝睡眠多少时间正常_百度宝宝知道.txt  028_家里有丙肝病人,家里人需要怎样预防被传染_有问必答_快速问医生.txt  029_肘关节疼痛挂什么科_潘登医生讲座讲解疾病-快速问医生.txt  031_华为mate30屏幕尺寸多大_多大屏幕_智能家.txt  032_全国十大精神医院排名 - 百度宝宝知道.txt  033_桂林西瓜霜喷剂的功效_寻医问药网_xywy.com.txt  034_优速快递运费查询,优速快递价格查询,优速快递价格表,优速快递费用.txt  041_吃一堑长一智是什么意思_作业帮.txt  (+36 more)
benchmark/docs/extracted/: 002_【步骤图】红烧鲍鱼的做法_红烧鲍鱼的做法步骤_菜谱_下厨房.txt  003_吉普指南者尾部LONGITUDE代表什么意思.txt  005_红霉素眼膏可以治疗鼻炎吗_百度知道.txt  007_吉丰社区介绍_吉林省吉林市丰满区丰满街道吉丰社区资料简介.txt  008_一天吃几个鹌鹑蛋最好 - 百度宝宝知道.txt  012_甲泼尼龙琥珀酸钠作用_有来医生.txt  013_空腹可以吃番石榴吗_39健康问答_39健康网.txt  016_艾滋病性传播得几率是多少_有问必答_快速问医生.txt  018_时间.路程的计算公式怎么运用.如果求速度的话要怎么运用时间、路程.txt  020_女性下体瘙痒,有白皮症状,而且越抓越痒,_有问必答_快速问医生.txt  021_吃药时吃了辣的东西有什么影响_百度拇指医生.txt  022_数据和信息的关系-时间财富网.txt  023_小孩结膜炎总眨眼睛怎么办_有问必答_快速问医生.txt  024_上环好吗对身体有害吗_妈妈网小百科.txt  025_补完牙后多久可以吃东西_有问必答_快速问医生.txt  030_钱组词 包含钱字组词 - 钱组词的词语大全-【练字拼写网】.txt  037_腰椎变形怎么治疗_最真实的经验分享_健康经验_快速问医生.txt  038_白血病是癌症吗-有来医生.txt  040_换股骨头需要多少钱-有来医生.txt  042_可以借款10万的app有哪些 爱问知识人.txt  044_hcg降了是不是生化了_妈妈网小百科.txt  046_达芬奇1516 操作界面字体太大太小如何设置.txt  050_4月20日世界各国新冠肺炎疫情最新排名表 - 全球疫情.txt  056_乘飞机携带化妆品规定乘飞机携带化妆品注意事项【女士必看】.txt  057_摸鱼(词语解释)_百度百科.txt  058_人流一个月后可以上环吗_39健康问答_39健康网.txt  060_肚脐眼太脏如何清理。_有问必答_快速问医生.txt  070_乙肝表面抗原阴性还会有乙肝吗_有问必答_快速问医生.txt  073_如何消除法令纹 这几种方法很有效.txt  074_脂肪肝危害-有来医生.txt  075_爱乐维经期可以吃吗-有来医生.txt  076_小孩经常张嘴是什么原因 - 百度宝宝知道.txt  077_屁股上长了硬疙瘩疼._有问必答_快速问医生.txt  078_教你在家腌苤蓝,腌好后口感香脆好吃,做法也很简单 - 美味小舍.txt  079_中国人为何不能当联合国秘书长_百度知道.txt  080_糖尿病适合吃的10种水果_糖尿病_养生之道网.txt  085_牙齿发软是怎么回事_有问必答_快速问医生.txt  086_2020年自考本科报名时间_学梯网.txt  088_我做了检查高危HPV-DNA结果是阴性,但是医生说还要等病理,我有中度.txt  091_概括一篇小说的故事情节应该怎样概括答法是怎样_作业帮.txt  (+5 more)
benchmark/processed/: documents.json
benchmark/processed/texts/: 002_MED-1323.txt  004_MED-4762.txt  005_MED-2130.txt  008_MED-1461.txt  012_MED-4757.txt  016_MED-3013.txt  017_MED-903.txt  019_MED-1237.txt  020_MED-1834.txt  021_MED-1922.txt  022_MED-3542.txt  024_MED-869.txt  026_MED-1739.txt  027_MED-4642.txt  029_MED-4564.txt  031_MED-2990.txt  033_MED-3202.txt  035_MED-2146.txt  036_MED-5062.txt  037_MED-5319.txt  039_MED-4839.txt  045_MED-2145.txt  046_MED-1532.txt  050_MED-1281.txt  051_MED-1232.txt  054_MED-2588.txt  055_MED-5225.txt  056_MED-2476.txt  057_MED-4049.txt  058_MED-2080.txt  059_MED-5052.txt  060_MED-974.txt  062_MED-3272.txt  063_MED-3692.txt  064_MED-1394.txt  065_MED-2713.txt  067_MED-3765.txt  068_MED-2217.txt  070_MED-4176.txt  071_MED-4134.txt  (+68 more)
crates/: README.md
crates/config/: Cargo.toml
crates/config/src/: constants.rs  lib.rs
crates/example/: Cargo.toml
crates/ipc/: Cargo.toml  README.md
crates/query/: Cargo.toml
crates/query/src/: lexer.rs  lib.rs  parser.rs  validator.rs
crates/rpc/: Cargo.toml  README.md
crates/rpc/src/: lib.rs  search.rs
crates/search-core/: Cargo.toml
crates/search-core/src/: ai.rs  cache.rs  config.rs  extract.rs  indexer.rs  lib.rs  models.rs  query_executor.rs  registry.rs  rpc_compat.rs  search.rs
crates/search-core/src/schema/: builder.rs  document.rs  fields.rs  mod.rs
docs/: API_REFERENCE.md  ARCHITECTURE.md
(+3 files in other folders)
