[workspace]
resolver = "3"
default-members = ["apps/server"]
members = [
"apps/*",
"crates/*"
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
async-trait = "0.1"
tokio = { version = "1.48.0", features = ["full"] }
color-eyre = "0.6"
anyhow = "1.0"
toml = "0.9"
dirs = "5.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
derive_more = { version = "2.1", features = ["from"]}
rstest = "0.26"
etcetera = "0.11"



