[workspace]
resolver = "3"
default-members = ["apps/server"]
members = [
"apps/*",
"crates/*"
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
async-trait = "0.1"
tokio = { version = "1.48.0", features = ["full"] }
color-eyre = "0.6"
anyhow = "1.0"
toml = "0.9"
dirs = "5.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
derive_more = { version = "2.1", features = ["from"]}
rstest = "0.26"
etcetera = "0.11"
glob = "0.3"

# 搜索引擎
tantivy = "0.25"
tantivy-jieba = "0.17"
jieba-rs = "0.8"

# AI 模型
candle-core = "0.8.2"
candle-nn = "0.8.2"
candle-transformers = "0.8.2"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
hf-hub = { version = "0.4", default-features = false, features = ["ureq"] }

# 文件监控
notify = "6.0"
ignore = "0.4"
walkdir = "2.3"

# 文本提取
pdf-extract = "0.10"

# 缓存
sled = "0.34"
bincode = "1.3"

# 其他
once_cell = "1.19"
regex = "1.10"

[workspace.dependencies.tarpc]
version = "0.37"
features = [
"tokio1",
"serde-transport",
"serde-transport-bincode",
"unix"
]

