[package]
name = "gui"
version = "0.1.0"
edition.workspace = true

[dependencies]
egui.version = "0.33.3"
egui_extras = { version = "0.33.3", features = ["default", "image"] }
font-kit = "0.14.3"

tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
config.workspace = true
anyhow.workspace = true
profiling = "1.0"
puffin = { version = "0.19", optional = true }
puffin_http = { version = "0.16", optional = true }
mimalloc = "0.1.48"

[dependencies.eframe]
version = "0.33.3"
default-features = false
features = [
"accesskit",
"glow",
"wayland",
"x11"
]

[features]
profile-with-puffin = ["profiling/profile-with-puffin", "dep:puffin", "dep:puffin_http"]
