[package]
name = "gui"
version = "0.1.0"
edition.workspace = true

[dependencies]
# Note, we are using an patched version, which is specified at the Cargo.toml
# at project root 
egui = { version = "0.33.3", features = [ "callstack", "accesskit"] }
egui_extras = { version = "0.33.3", features = ["svg"] }
egui-i18n = { version = "0.1",  features = ["fluent"] }
egui_table = "0.6"

tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
profiling = "1.0"
puffin = { version = "0.19", optional = true }
puffin_http = { version = "0.16", optional = true }
mimalloc = "0.1.48"
derive_more.workspace = true
toml.workspace = true
tokio.workspace = true
rpc = { path = "../../crates/rpc" }
config = { path = "../../crates/config" }
query = { path = "../../crates/query" }
tarpc.workspace = true
strum.workspace = true
derive_builder.workspace = true
tokio-stream.workspace = true
uuid.workspace = true
chrono.workspace = true


[dependencies.eframe]
version = "0.33.3"
default-features = false
features = [
"accesskit",
"glow",
"wayland",
"x11",
]

[dev-dependencies]
rstest.workspace = true


[features]
profile-with-puffin = ["profiling/profile-with-puffin", "dep:puffin", "dep:puffin_http"]
transparent-viewport = []

