[package]
name = "server"
version = "0.1.0"
edition.workspace = true

[dependencies]
tokio.workspace = true
color-eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
clap.workspace = true
async-trait.workspace = true
toml.workspace = true
etcetera.workspace = true
