[package]
name = "server"
version = "0.1.0"
edition.workspace = true

[dependencies]
tokio.workspace = true
color-eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
clap.workspace = true
async-trait.workspace = true
toml.workspace = true
tarpc.workspace = true
rpc = { path = "../../crates/rpc" }
config = { path = "../../crates/config" }
tracing.workspace = true
tracing-subscriber.workspace = true
futures = "0.3"
