[package]
name = "server"
version = "0.1.0"
edition.workspace = true

[dependencies]
tokio.workspace = true
color-eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
clap.workspace = true
async-trait.workspace = true
toml.workspace = true
tarpc.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
futures = "0.3"
uuid.workspace = true
sled = "0.34"
bincode = "1.3"
chrono = "0.4"

# 内部 crates
rpc = { path = "../../crates/rpc" }
config = { path = "../../crates/config" }
search-core = { path = "../../crates/search-core", features = ["rpc-compat"] }
query = { path = "../../crates/query", features = ["serde"] }

[[example]]
name = "test_client"
path = "examples/test_client.rs"
