[package]
name = "ipc"
version = "0.1.0"
edition.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
codec = ["thiserror"]
sync-codec = ["codec"]
tokio-codec = ["codec", "tokio", "async-trait"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
tokio = { version = "1", features = ["io-util"], optional = true }
